Bug 1226877 - make toolbox panels inaccessible with keyboard when they are hidden or collapsed. r=bgrins
MozReview-Commit-ID: IEj81E2Y5wv

UltraBlame original commit: a5ee1d48d2f559ae0775463ae6cc7fee8119c3b1

--- a/devtools/client/themes/toolbox.css
+++ b/devtools/client/themes/toolbox.css
@@ -263,6 +263,25 @@ svg
 -
 command
 -
+eyedropper
+-
+image
+:
+url
+(
+images
+/
+command
+-
+eyedropper
+.
+svg
+)
+;
+-
+-
+command
+-
 rulers
 -
 image
@@ -581,6 +600,27 @@ firebug
 command
 -
 noautohide
+.
+svg
+)
+;
+-
+-
+command
+-
+eyedropper
+-
+image
+:
+url
+(
+images
+/
+firebug
+/
+command
+-
+eyedropper
 .
 svg
 )
@@ -2683,5 +2723,50 @@ selected
 visibility
 :
 visible
+;
+}
+.
+toolbox
+-
+panel
+*
+#
+toolbox
+-
+panel
+-
+webconsole
+[
+collapsed
+]
+*
+{
+-
+moz
+-
+user
+-
+focus
+:
+ignore
+;
+}
+.
+toolbox
+-
+panel
+[
+selected
+]
+*
+{
+-
+moz
+-
+user
+-
+focus
+:
+normal
 ;
 }
